redis.yml
apiVersion: v1
kind: Service
metadata:
  name: redis-cache
  labels:
    k8s-app: kube-registry-tls
spec:
  ports:
  - port: 6379
    targetPort: 6379
  selector:
    k8s-app: kube-registry-tls

---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: redis-cache
spec:
  # https://github.com/kubernetes/kubernetes/issues/23597
  revisionHistoryLimit: 3
  replicas: 1
  template:
    metadata:
      labels:
        k8s-app: kube-registry-tls
    spec:
      containers:
      - name: redis
        image: redis:3
        resources:
          requests:
            cpu: 100m
            memory: 1Gi
        ports:
          - containerPort: 6379
