reg_svc.yml
apiVersion: v1
kind: Service
metadata:
  name: kube-registry-tls
  labels:
    k8s-app: kube-registry-tls
    kubernetes.io/name: "KubeRegistry"
spec:
  selector:
    k8s-app: kube-registry-tls
  type: LoadBalancer
  loadBalancerIP: 52.48.28.40
  ports:
  - name: registry-tls
    port: 5000
    protocol: TCP
  - name: registry-tls-ui
    port: 80
    protocol: TCP
